deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dell-assignment-deployment
  namespace: dell-assignment-kk
  labels:
    app: dell-assignment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: dell-assignment
  template:
    metadata:
      labels:
        app: dell-assignment
    spec:
      containers:
      - name: dell-assignment
        image: kkkamatchi/dell-assignment:latest
        ports:
          - containerPort: 8080
        resources:
          limits:
            memory: 512Mi
            cpu: "1"
          requests:
            memory: 256Mi
            cpu: "0.2"
